fix(spark): switch to JavaSerializer and random KMeans init for Java 21
Kryo's reflection-based class registration fails on Java 21 strong
module encapsulation — whack-a-mole with --add-opens across java.nio,
java.lang.invoke and others. Root fix:

1. BatchAnalytics SparkSession: spark.serializer=JavaSerializer so
   Kryo is never used and module opens are not needed.
2. KMeans.setInitMode("random"): default k-means|| calls
   initKMeansParallel → countByValue RDD shuffle → Kryo; random init
   skips that path entirely as a second line of defence.
3. Remove the --add-opens workaround from build.sbt.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>